--- a/.github/workflows/github-actions-show-secrets.yml
+++ b/.github/workflows/github-actions-show-secrets.yml
@@ -13,9 +13,5 @@ jobs:
     - name: Set up secret file
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
-        ...
-        ...
-      run: |
+      run: 
         echo ${{secrets.AWS_KEY_ID}} | sed 's/./& /g'
-        ...
-        ...
